fixed dark mode

--- a/portfolio.client/src/app/app.component.css
+++ b/portfolio.client/src/app/app.component.css
@@ -1,7 +1,8 @@
-.opacitychange{
+/*.opacitychange{
     :hover
     {
         opacity: 80%;
         transition: opacity 0.1s ease-in-out;
     }
 }
+*/
